--- a/week 3/day 6/index.html
+++ b/week 3/day 6/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="ex_XP.js"></script>
+    <script src="dailyCgal.js"></script>
 </body>
 </html>
