--- a/week5/day2/daily_chal/index.html
+++ b/week5/day2/daily_chal/index.html
@@ -30,7 +30,7 @@
     <span id="story"></span>
     </p>
 
-    <script src="script.js"></script>
+    <script src="scriipt.js"></script>
 
  </body>
 </html>
