--- a/week6/day2/ex_xp/ex5.html
+++ b/week6/day2/ex_xp/ex5.html
@@ -8,14 +8,15 @@
 </head>
 <body>
     <script>
-       const colors = ["Blue", "Green", "Red", "Orange", "Violet", "Indigo", "Yellow"];
-       const ordinal = ["th","st","nd","rd"]; 
-       for (let i = 1; i < colors.length; i++) {
-        for (let j = 1; i < ordinal.length; j++) {
-            console.log(`${i}${ordinal[i]} choice is ${colors[i]}`)
-        }
-       }
-       
+        const colors = ["Blue", "Green", "Red", "Orange", "Violet", "Indigo", "Yellow"];
+const ordinal = ["th","st","nd","rd"];
+
+for(let i = 0; i < colors.length; i++) {
+  const index = i+1;
+  const suffix = (index > 3 && index < 21) || index % 10 > 3 ? ordinal[0] : ordinal[index % 10];
+  console.log(`Le ${index}${suffix} choix est ${colors[i]}`);
+}
+
     </script>
 </body>
 </html>
