--- a/week6/day2/dayli_chal/index.html
+++ b/week6/day2/dayli_chal/index.html
@@ -36,7 +36,7 @@
 ];
 const user = [];//declaration du tab
 gameInfo.forEach(function(joueur) {
-  user.push(joueur.user+ "!");//ajout sur dans le tab
+  user.push(joueur.username+ "!");//ajout sur dans le tab
 });
 console.log(user); 
 //2---------
