--- a/week6/day2/dayli_chal/index.html
+++ b/week6/day2/dayli_chal/index.html
@@ -43,7 +43,7 @@ console.log(user);
 const winners = [];//declaration du tab
 gameInfo.forEach(function(joueur) {
   if (joueur.score > 5) {
-    winners.push(joueur.user); //ajout sur dans le tab
+    winners.push(joueur.username); //ajout sur dans le tab
   }
 });
 console.log(winners);
