--- a/week7/day4/ex_xp/ex1.html
+++ b/week7/day4/ex_xp/ex1.html
@@ -21,6 +21,8 @@
 const {name, location: {country, city, coordinates: [lat, lng]}} = person;
 
 console.log(`I am ${name} from ${city}, ${country}. Latitude(${lat}), Longitude(${lng})`);
+// il est  possible faire person.name....etc pour la meme resultat
+// la sortie est =I am John Doe from Vancouver, Canada. Latitude(49.2827), Longitude(-123.1207)
     </script>
 </body>
 </html>
