--- a/week7/day4/ex_xp/ex2.html
+++ b/week7/day4/ex_xp/ex2.html
@@ -14,7 +14,7 @@
 }
 
 console.log(displayStudentInfo({ first: 'Elie', last: 'Schoppik' }));
-
+//resultat est :Your full name is Elie Schoppik
     </script>
 </body>
 </html>
