--- a/week7/day4/ex_xp/ex4.html
+++ b/week7/day4/ex_xp/ex4.html
@@ -15,6 +15,8 @@
       
       const member = new Person('John');
       console.log(typeof member);
+      // le type de class member est object
+      // la classe member est une instance de la classe person
 
     </script>
 </body>
