--- a/week4/day4/dayli_chal/index.html
+++ b/week4/day4/dayli_chal/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <script>
-        function singBottlesOfBeer(numBottles) {
-  for (let i = numBottles; i > 0; i--) {
-    let bottleTxt = i === 1 ? "bottle" : "bottles";
-    let nextBottleTxt = i - 1 === 1 ? "bottle" : "bottles"; //revenue en arriere
-    console.log(`${i} ${bottleTxt} of beer on the wall`);
-    console.log(`${i} ${bottleTxt} of beer`);
-    console.log(`Take ${i === 1 ? "it" : i} down, pass ${i === 1 ? "it" : "them"} around`);
-    console.log(`${i - 1 === 0 ? "No more" : i - 1} ${nextBottleTxt} of beer on the wall\n`);
-  }
+      let bot=prompt("Entrer le nombre de bouteilles pour commencer")
+      let botnext= bot
+       
+  for (let i = 0; i <Number(bot) ; i++) {
+    botnext=botnext-i
+    if(botnext<0){
+      console.log('0 bouteille de biére sur le mur ')
+      break;
+    }
+    
+console.log(botnext)
 }
 
-let numBottles = parseInt(prompt("Enter the number of bottles to start with:"));
-singBottlesOfBeer(numBottles); //l'appel du fonction
 
     </script>
 </body>
